Fxied button styling issues and inconsistent page alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,7 +35,6 @@ h6 {
 
 .page {
   max-width: 800px;
-  margin: 0 auto;
   padding: 2rem 1rem 4rem;
 }
 
